# bookkeeper

./: .gitignore  .pylintrc  LICENSE  README.md  expences.db  pyproject.toml  specification.md  test.csv  test.db  test.sqlite
bookkeeper/: SQL_simple_client.py  bookkeeper.py  bookkeeper_presenter.py  cats_for_simple_clients.py  hard_client.py  medium_client.py  presenter.py  run_bookkeeper.py  run_simple_client.py  simple_client.py  sql_simple_client.py  ui_client.py  utils.py
bookkeeper/models/: budget.py  category.py  expense.py
bookkeeper/repository/: abstract_repository.py  memory_repository.py  repository_factory.py  sqlite_repository.py
bookkeeper/view/: Redactclass.py  add_expense_widget.py  budget_table.py  budget_widget.py  category_edit.py  category_widget.py  edit_ctg_window.py  edit_widget.py  expence_widget.py  expense_add.py  expense_table.py  expense_widget.py  expenses_list_widget.py  main_window.py  presenters.py  redactmenu.py  table.py  view.py  widgets.py
databases/: test_database.db  ui_client.db
dbfiles/: database.db  database_test.db
tests/: test_utils.py
tests/test_models/: test_budget.py  test_category.py  test_expense.py
tests/test_repository/: test_abstract_repository.py  test_memory_repository.py  test_sqlite_repository.py
tests/test_view/: test_Redactclass.py  test_add_expense_widget.py  test_budget_table.py  test_budget_widget.py  test_category_edit.py  test_category_widget.py  test_expense_add.py  test_expense_table.py  test_expenses_list_widget.py  test_main_window.py  test_redactmenu.py  test_view.py
